
Plugins can now implement the `extractUsername()` method to return the username that should be used to handle mappings between Mesh and JWT.

Please note that installations which already use an authentication plugin can either update the plugin and provide the public keys or manually add the public key to the `public-keys.json` configuration file.
____


[[v0.40.3]]
== 0.40.3 (13.09.2019)

icon:plus[] Java Rest Client: Various new methods have been added to handle endpoint agnostic requests (`get(), post(), delete(), put()`). These methods can be used to handle plugin requests.

icon:check[] Migration: It is now possible to apply schema / microschema changes that include the `name` property via the `changes` endpoint. Previously the name property was not utilized.

[[v0.40.2]]
== 0.40.2 (09.09.2019)

icon:plus[] Core: It is now possible to configure the transaction retry limit using the `MESH_GRAPH_TX_RETRY_LIMIT` environment variable or the `storage.txRetryLimit` parameter.

icon:check[] Core: The default value for `storage.synchronizeWrites` has been changed to `true`.

icon:check[] Core: The default value for the OrientDB parameter `tx.retry.delay` has been increased to 10ms, and the constant delay will be used instead of growing linearly. It is now possible to configure the delay via the `MESH_GRAPH_TX_RETRY_DELAY` environment variable.

icon:check[] Config: It is now possible to override the mapping mode with the `MESH_ELASTICSEARCH_MAPPING_MODE` environment variable. link:https://github.com/gentics/mesh/issues/878[#878]

[[v0.40.1]]
== 0.40.1 (06.09.2019)

CAUTION: REST: When updating permissions to an element, unset permissions in the request will not change these permissions anymore. Previously, unset permission were set to false.

icon:check[] Core: Various handlers were blocking the event loop when run. This has been fixed now.
